// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-jvTWZz leGCow"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-ijuBCs bZEGfc"
    disabled={false}
    size="sm"
  >
    <input
      checked={true}
      className="sc-kjkawG kjvtqF"
      id="test-switch-1"
      onChange={[Function]}
      size="sm"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-gfrqJO iSLemu"
      size="sm"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs dsQpNe"
      disabled={false}
      size="md"
    >
      <input
        checked={true}
        className="sc-kjkawG kjvtqF"
        id="button-switch-1"
        onChange={[Function]}
        size="md"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO bVoYJV"
        size="md"
      >
        <span
          className="sc-cMlSiz fpCcfV"
        >
          <p
            className="sc-khrHlC ctQozk"
            color="bulma.100"
            size={16}
          >
            Off
          </p>
          <p
            className="sc-khrHlC ctQozk"
            color="bulma.100"
            size={16}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs gekZTN"
      disabled={false}
      size="lg"
    >
      <input
        checked={true}
        className="sc-kjkawG kjvtqF"
        id="button-switch-2"
        onChange={[Function]}
        size="lg"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO bVoYJV"
        size="lg"
      >
        <span
          className="sc-cMlSiz fpCcfV"
        >
          <p
            className="sc-khrHlC ctQozk"
            color="bulma.100"
            size={16}
          >
            Off
          </p>
          <p
            className="sc-khrHlC ctQozk"
            color="bulma.100"
            size={16}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Switch renders Disabled state 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs bQRPfG"
      disabled={true}
      size="sm"
    >
      <input
        checked={true}
        className="sc-kjkawG kjvtqF"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO iSLemu"
        size="sm"
      />
    </label>
  </div>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs bQRPfG"
      disabled={true}
      size="sm"
    >
      <input
        checked={false}
        className="sc-kjkawG kjvtqF"
        id="test-switch-disabled"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-gfrqJO jVuYEm"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs hopWcG"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-kjkawG bxkSXM"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO fKAeud"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs bDaqpt"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-kjkawG ldehIs"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO edkwCs"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs bZEGfc"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-kjkawG ldehIs"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO edkwCs"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs hopWcG"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-kjkawG gQbzqV"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO bEtHcD"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs bDaqpt"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-kjkawG kjvtqF"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO iSLemu"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-jvTWZz leGCow"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-ijuBCs bZEGfc"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-kjkawG kjvtqF"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gfrqJO iSLemu"
        size="sm"
      />
    </label>
  </div>
</div>
`;
